tests/expected_invalid_lexer_unterminated_string.diag.out
<input>:3:17: error: unescaped line terminator in string literal
            "morning
                    ^
